# bipa

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  rust-toolchain  rust_cleaner.sh  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  openapi.yaml  routes.rs
crates/api/src/controller/: mod.rs  node_controller.rs
crates/api/src/controller/dto/: mod.rs  node_dto.rs
crates/api/src/test_support/: assertions.rs  http_setup.rs  mod.rs  node_fixture.rs
crates/core/: Cargo.toml
crates/core/src/: app_context.rs  config.rs  error.rs  lib.rs  state.rs
crates/core/src/node/: find_nodes_use_case.rs  insert_nodes_use_case.rs  mod.rs  model.rs  repository.rs
crates/core/src/test_support/: mod.rs  node_fixture.rs  random_fixture.rs  test_repository.rs  usecase_setup.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
crates/worker/src/dto/: lightning_node_dto.rs  mod.rs
crates/worker/src/runner/: lightning_node_loader_runner.rs  mod.rs
crates/worker/src/test_support/: http_mock.rs  mod.rs  worker_setup.rs
database/migrations/: 0001_node_table.sql
docker/: localstack.sh
docker/localstack/: secrets-manager-public.json
local/docker/: localstack.sh
local/docker/localstack/: secrets-manager.json
local/k8s/: app.yaml  infra.yaml
