[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Deroldo <diogoderoldo@gmail.com>"]

[workspace.dependencies]
# my custom create to start tokio and axum
# this provides http server and client observability, env variables load, feature flags, outbox table pattern and much more
# https://github.com/deroldo/derust
derust = { version = "0.3.12", features = ["postgres", "prometheus", "env_from_secrets_manager", "start_test", "http_client"] }

tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.8", default-features = true, features = ["macros", "tokio"] }
tower-http = { version = "0.6.8", features = ["cors"] }

sqlx = { version = "0.8.6", features = ["bigdecimal", "chrono", "uuid"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
jsonpath_lib = { version = "0.3.0" }

regex = { version = "1.12.2" }
rand = { version = "0.9.2" }
uuid = { version = "1.19.0", features = ["v7"] }
chrono = { version = "0.4.42", features = ["serde"] }

reqwest = { version = "0.12.28", features = ["native-tls", "rustls-tls"] }
swagger-ui-dist = { version = "5.31.0" }

tracing = { version = "0.1.44", features = ["attributes", "tracing-attributes"] }

test-context = { version = "0.5.4" }

syn = { version = "2.0.111", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"