[package]
name = "bipa-api"
version = "0.0.1"
edition = "2024"
authors = ["Deroldo <diogoderoldo@gmail.com>"]
categories = ["web-programming"]

[dependencies]
bipa-core = { path = "../core" }

derust = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
swagger-ui-dist = { workspace = true }

rust_decimal = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
test-context = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
jsonpath_lib = { workspace = true }
