[package]
name = "bipa-core"
version = "0.0.1"
edition = "2024"
authors = ["Deroldo <diogoderoldo@gmail.com>"]
license = "MIT"

[features]
test_support = []

[dependencies]
derust = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sqlx = { workspace = true }
chrono = { workspace = true }

regex = { workspace = true }

tokio = { workspace = true }
rand = { workspace = true }
test-context = { workspace = true }